# cognitive_robot_abstract_machine

./: .coverage  .gitignore  .gitmodules  .~llmr_sg_model_architecture.pptx  README.md  docs_index.md  llmr_sg_model_architecture.pptx  pyproject (1).toml  pyproject.toml
agentic_llmr/: Gemini-_43.md  langgraph.json  pyproject.toml  test_agentic.py  test_pose.py
agentic_llmr/.langgraph_api/: .langgraph_ops.pckl
agentic_llmr/notebooks/: agentic_llmr_krrood_world_discussion_20260526_151355.md  agentic_sdt_demo.ipynb  pickup_resolution_demo.ipynb
agentic_llmr/notebooks/outputs/: q1_scene_overview.html  q3_surface_query.html  q6_scene_overview.html  q7_placement.html
agentic_llmr/src/agentic_llmr/: __init__.py  backend.py  studio.py
agentic_llmr/src/agentic_llmr/agents/: __init__.py  kinematics_agent.py  planning_agent.py  scene_query_agent.py
agentic_llmr/src/agentic_llmr/core/: composer.py  interfaces.py  orchestrator.py  planner.py  state.py  supervisor.py  trace.py
agentic_llmr/src/agentic_llmr/integrations/: pycram_adapter.py  world_manager.py
agentic_llmr/src/agentic_llmr/platform/: __init__.py  actions.py  type_bridge.py  world.py
agentic_llmr/src/agentic_llmr/resolution/: action_match.py  deserializer.py  scene.py  schema_docs.py
agentic_llmr/src/agentic_llmr/tools/: artifacts.py  kinematics.py  planning.py  scene_query.py  scratchpad.py
generative_backend_old_old/: demo.py  main.py  pyproject.toml
generative_backend_old_old/src/generative_backend/: entity_grounder.py  hybrid_resolver.py  partial_designator_builder.py  pipeline.py
llmr_updated_arch/: README.md  pyproject.toml
llmr_updated_arch/notebooks/: llm_backend_both_reasoners_example.ipynb  mujoco_world_visualization.ipynb
llmr_updated_arch/src/llmr_updated_arch/: __init__.py
llmr_updated_arch/src/llmr_updated_arch/core/: __init__.py  backend.py  context.py  contracts.py  pipeline.py  registry.py  result.py
llmr_updated_arch/src/llmr_updated_arch/entrypoints/: __init__.py  instruction.py  match.py  pycram.py
llmr_updated_arch/src/llmr_updated_arch/generation/: __init__.py  classifier.py  flanagan.py  framenet.py  slot_semantics.py
llmr_updated_arch/src/llmr_updated_arch/grounding/: __init__.py  entity.py  pipeline.py  resolvers.py
llmr_updated_arch/src/llmr_updated_arch/hypotheses/: __init__.py  build.py  graph.py  meta.py
llmr_updated_arch/src/llmr_updated_arch/schemas/: slots.py  (+4 more)
minimal_llmr/: pyproject.toml
minimal_llmr/notebooks/: trails.ipynb
minimal_llmr/src/minimal_llmr/: __init__.py  backend.py
(+1366 files in other folders)
